--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Rouzbeh-Berenji/tinyapp/issues"
   },
-  "homepage": "https://github.com/Rouzbeh-Berenji/tinyapp#readme"
+  "homepage": "https://github.com/Rouzbeh-Berenji/tinyapp#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
