--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
   },
   "homepage": "https://github.com/Rouzbeh-Berenji/tinyapp#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "method-override": "^3.0.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "nodeman": "^1.1.2",
     "nodemon": "^2.0.20"
   }
